--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
@@ -52,4 +51,5 @@ dependencies {
     implementation files('libs\\ormlite-android-5.1.jar')
     implementation files('libs\\ormlite-core-5.1.jar')
     implementation 'com.mysugr.MPAndroidChart:MPAndroidChart:3.1.0-mysugr-1'
+    implementation files('libs\\commons-math3-3.6.1.jar')
 }
