--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:label="@string/title_activity_new_simple_ex"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ExerciseProgressActivity"
+            android:name=".ProgressActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".CompoundExerciseActivity"
