--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,5 @@ dependencies {
     implementation files('libs\\ormlite-core-5.1.jar')
     implementation 'com.mysugr.MPAndroidChart:MPAndroidChart:3.1.0-mysugr-1'
     implementation files('libs\\commons-math3-3.6.1.jar')
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    implementation 'org.projectlombok:lombok:1.18.10'
 }
