--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.jakewharton:butterknife:10.2.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation files('libs\\ormlite-android-5.1.jar')
     implementation files('libs\\ormlite-core-5.1.jar')
     implementation 'com.mysugr.MPAndroidChart:MPAndroidChart:3.1.0-mysugr-1'
-    implementation files('libs\\commons-math3-3.6.1.jar')
-    implementation 'org.projectlombok:lombok:1.18.10'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
 }
