--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
-    implementation files('libs\\ormlite-android-5.1.jar')
-    implementation files('libs\\ormlite-core-5.1.jar')
+    implementation  group: 'com.j256.ormlite', name: 'ormlite-android', version: '5.1'
+    implementation  group: 'com.j256.ormlite', name: 'ormlite-core', version: '5.1'
     implementation 'com.mysugr.MPAndroidChart:MPAndroidChart:3.1.0-mysugr-1'
-    implementation files('libs\\commons-math3-3.6.1.jar')
     compileOnly "org.projectlombok:lombok:1.18.10"
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
 }
