--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,19 @@ android {
             keyPassword '111111'
         }
     }
+
+    def versionArray = incrementBuild()
+    writeVersionClassFile( versionArray )
+
+    def verName = '' + versionArray[0].toString() + '.' + versionArray[1] + '.' + versionArray[2]
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "org.max.successcounter"
         minSdkVersion 28
         targetSdkVersion 28
         versionCode 1
-        versionName '0.2'
+        versionName verName
         setProperty("archivesBaseName", "scounter-$versionName")
         applicationIdSuffix = 'debug'
         signingConfig signingConfigs.debug
@@ -52,11 +58,60 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.jakewharton:butterknife:10.2.1'
+
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    compileOnly "org.projectlombok:lombok:1.18.10"
+
     implementation  group: 'com.j256.ormlite', name: 'ormlite-android', version: '5.1'
     implementation  group: 'com.j256.ormlite', name: 'ormlite-core', version: '5.1'
     implementation 'com.mysugr.MPAndroidChart:MPAndroidChart:3.1.0-mysugr-1'
-    compileOnly "org.projectlombok:lombok:1.18.10"
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
+}
+
+def incrementBuild()
+{
+    def minor = 0
+    def major = 0
+    def build = 1
+    def props = new Properties()
+
+    def versionFile = file( "version.properties" )
+
+    if( versionFile.canRead()  )
+    {
+        props.load( new FileInputStream( versionFile ) )
+        major = props["MAJOR" ].toInteger()
+        minor = props["MINOR" ].toInteger()
+        build = props["BUILD" ].toInteger() + 1
+
+        props["MAJOR" ] = major.toString()
+        props["MINOR" ] = minor.toString()
+        props["BUILD" ] = build.toString()
+
+        props.store(  versionFile.newWriter(), null )
+
+        //return "$major.$minor.$buil"
+        return [major, minor, build ]
+    }
+    else
+        throw new FileNotFoundException( "File version.properties not found")
+}
+
+def writeVersionClassFile( verArray  )
+{
+    def fileName = "src\\main\\java\\org\\max\\successcounter\\Version.java"
+
+    def versionClassFile = file( fileName )
+
+    if( !versionClassFile.canRead() )
+        throw new FileNotFoundException( "Version class file not found" )
+
+    String buff = versionClassFile.text
+
+    buff = buff.replaceAll( 'MAJOR\\s*=\\s*\\d\\s*;', 'MAJOR=' + verArray[0].toString() + ';' )
+    buff = buff.replaceAll( 'MINOR\\s*=\\s*\\d\\s*;', 'MINOR=' + verArray[1].toString() + ';' )
+    buff = buff.replaceAll( 'BUILD=\\s*\\d\\s*;', 'BUILD=' + verArray[2].toString() + ';' )
+
+    versionClassFile.write( buff );
+
 }
