--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SeriesExerciseActivity"></activity>
+        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".SeriesExerciseActivity" />
         <activity
             android:name=".NewCompoundActivity"
             android:theme="@style/AppTheme.NoActionBar" />
