--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,18 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        
+        classpath 'com.android.tools.build:gradle:3.6.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+}
+
+plugins {
+    id 'org.ajoberstar.grgit' version '1.7.2'
+    // only one of the following
+    id 'org.ajoberstar.release-opinion' version '1.7.2'
+    id 'org.ajoberstar.release-base' version '1.7.2'
 }
 
 allprojects {
