--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
             buildType = "debug"
             releaseBuild = false
             println( "----------------- debug ----------------------")
+            println( grgit.branch.current.name )
         }
     }
 
@@ -138,6 +139,7 @@ def writeVersionClassFile(verArray, buildType) {
     buff = buff.replaceAll('BUILD\\s*=\\s*\\d+\\s*;', 'BUILD=' + verArray[2].toString() + ';')
     buff = buff.replaceAll('BUILD_DATE=\\"[a-zA-Z0-9\\s]+\\";', 'BUILD_DATE=\"' + verArray[3].toString() + '\";')
     buff = buff.replaceAll('buildType\\s*=\\s*\\"[a-zA-Z0-9\\s]+\\"\\s*;', 'buildType=\"' + buildType  + '\";')
+    println( "Branch " + grgit.branch.current.name )
     versionClassFile.write(buff);
     return fileName
 }
